--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: 
-        run: npm run build
+        run: npm run deploy
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
